--- a/backend/package.json
+++ b/backend/package.json
@@ -17,5 +17,8 @@
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
